<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite_store"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_favorite_store" />

    <item
        android:id="@+id/navigation_shakeomat"
        android:icon="@drawable/baseline_discount_24"
        android:title="@string/title_shakeomat" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>