<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stonka.shopapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shakeomat"
        android:name="com.stonka.shopapp.ui.shakeomat.ShakeomatFragment"
        android:label="@string/title_shakeomat"
        tools:layout="@layout/fragment_shakeomat" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.stonka.shopapp.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_favorite_store"
        android:name="com.stonka.shopapp.ui.favorite_store.FavoriteStoreFragment"
        android:label="@string/title_favorite_store"
        tools:layout="@layout/fragment_favorite_store" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.stonka.shopapp.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.stonka.shopapp.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.stonka.shopapp.ResetPasswordFragment"
        android:label="Register"
        tools:layout="@layout/fragment_reset_password" />
</navigation>